--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^2.6.5",
     "firebase": "^7.1.0",
     "vue": "^2.6.10",
-    "vuetify": "^2.0.0"
+    "vuetify": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
