--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.1.0",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.6",
     "vue-spinner": "^1.0.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.1.1"
