--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "core-js": "^2.6.5",
+    "dotenv": "^8.2.0",
     "firebase": "^7.1.0",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
